--- a/Index.html
+++ b/Index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>THis is main branch code</h1>
     <h1>Hi I am <b>B</b> branch</h1>
+    <h1>Any updat for me  <b>B</b></h1>
 </body>
 </html>
