--- a/Index.html
+++ b/Index.html
@@ -9,5 +9,6 @@
     <h1>THis is main branch code</h1>
     <h1>Hi I am <b>B</b> branch</h1>
     <h1>Any updat for me  <b>B</b></h1>
+    <h2>I am branch <b>A</b></h2>
 </body>
 </html>
